# oop-laboratory-works

./: .gitmodules  CMakeLists.txt  README.md
1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  functions.cpp  main
1/src/: main.cpp
1/test/: test-list.cpp
lab1/: CMakeLists.txt  main.cpp
lab1/include/: task.h
lab1/src/: task.cpp
lab1/tests/: tests.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: money.h
lab2/src/: money.cpp
lab2/tests/: tests.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: figure.h  figure_array.h  rectangle.h  square.h  trapezoid.h
lab3/src/: figure.cpp  figure_array.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
lab3/tests/: tests.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: figure.h  figure_array.h  rectangle.h  square.h  trapezoid.h
lab4/tests/: tests.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: allocator.h  vector.h
lab5/tests/: tests.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: bear.h  elf_.h  factory.h  npc.h  observer.h  rogue.h  visitor.h
lab6/src/: bear.cpp  elf_.cpp  factory.cpp  npc.cpp  observer.cpp  rogue.cpp  visitor.cpp
lab6/tests/: tests.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: bear.h  elf_.h  factory.h  npc.h  observer.h  rogue.h
lab7/src/: bear.cpp  elf_.cpp  factory.cpp  npc.cpp  observer.cpp  rogue.cpp
lab7/tests/: tests.cpp
